--- a/src/main/resources/com/example/parsing/hello-view.fxml
+++ b/src/main/resources/com/example/parsing/hello-view.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.parsing.HelloController">
     <padding>
@@ -12,4 +12,5 @@
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick
+    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+</VBox>
